manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: auth-microservice
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
